fixed overflow X issue with 100vw vs 100%. always use % below main digs

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html, body {
   min-height: 100vh;
-  max-width: 100vw;
+  width: 100%;
   background-color: #113372;
   text-Align: center;
   color: rgb(255, 245, 233);
@@ -8,6 +8,7 @@ html, body {
 }
 
 .aboutParallax {
+  width: 100%;
   min-height: 100vh;
   background-image: url("./images/codecrow.png");
   background-repeat: no-repeat;
@@ -15,14 +16,36 @@ html, body {
   background-position: bottom;
 }
 
+.aboutContainer {
+  width:100%;
+  padding:0;
+}
+#techRow {
+  max-width:100%;
+  padding: 1rem;
+  margin: -7rem 0 0 0;
+}
+
 .aboutCard {
   border-radius: .25rem;
-  background-color: rgba(248, 233, 214, 0.835);
-  margin: 2px 10px;
-  padding: 10px 10px;
-  height: 250px;
+  background-color: rgba(248, 233, 214, 0.918);
+  margin: 2px 2px;
+  padding: 20px 10px;
+  height: 450px;
   Color: rgb(0, 33, 85);
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.527);
+}
+
+.aboutCard ul {
+  padding: 5px;
+}
+
+.greeting {
+  width: 100%;
+  height: 150px;
+  background-color: rgb(255, 234, 208);
+  margin: 0;
+  padding: 0;
 }
 
 .projectTitle h2 {
